dropdown template update

--- a/project/core/templates/core/dropdown.html
+++ b/project/core/templates/core/dropdown.html
@@ -1,4 +1,4 @@
 <option value="">---------</option>
-{% for item in objects %}
+{% for item in object_list %}
 <option value="{{ item.pk }}">{{ item.title }}</option>
 {% endfor %}
